--- a/system_files/dx/usr/lib/systemd/system/aurora-dx-groups.service
+++ b/system_files/dx/usr/lib/systemd/system/aurora-dx-groups.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=Add wheel members to docker,and incus-admin groups
+Description=Add wheel members to incus-admin group
 
 [Service]
 Type=oneshot
